# AlfaCAD

CC2/Source/: 2L_section_CA_si.c  2L_section_CA_si_series.c  2L_section_CA_si_standards.c  2L_section_US_si.c  2L_section_US_si_standards.c  CMakeLists-Linux-Allegro5.txt  CMakeLists-MacOSarm.txt  CMakeLists-MacOSx64.txt  CMakeLists-Window64.txt  CMakeLists-Windows64.txt  CMakeLists.txt  CMakeLists_Linux_Allegro5.txt  CMakeLists_Mac_a64.txt  CMakeLists_Mac_x64.txt  CMakeLists_Windows64.txt  CT_section_AU_si.c  CT_section_AU_si_series.c  CT_section_AU_si_standards.c  CT_section_CA_si.c  CT_section_CA_si_series.c  CT_section_CA_si_standards.c  CT_section_EU_si.c  CT_section_EU_si_standards.c  CT_section_UK_si.c  CT_section_UK_si_standards.c  CT_section_US_si.c  CT_section_US_si_standards.c  ET_section_CA_si.c  ET_section_CA_si_series.c  ET_section_CA_si_standards.c  ET_section_EU_si.c  ET_section_EU_si_standards.c  ET_section_UK_si.c  ET_section_UK_si_standards.c  GlobalDllObjects.cpp  GlobalDllObjects.h  IH_section_AU_si.c  IH_section_AU_si_series.c  IH_section_AU_si_standards.c  IH_section_CA_si.c  (+312 more)
CC2/Source/3rdparty-MacOS/qt6/QtCore/: qconfig.h  qhashfunctions.h  qiterable.h  qmath.h  qmetacontainer.h  qmetatype.h  qnamespace.h  (+1 more)
CC2/Source/ds/: htable.c  htable.h  list.c  list_str.c  list_str.h
CC2/Source/include/: dirent.h
CC2/Source/res/: resource.h
CC2/VSProjects/AlfaCAD32-master/: AlfaCAD32.vcxproj  Script1.aps  Script1.res
CC2/VSProjects/AlfaCAD64-master/: AlfaCAD.vcxproj  Script1.aps  Script1.rc  Script1.res
CC2/alfaplugin-export/: CMakeLists.txt  alfaplugin.def  alfaplugin.h  alfaplugin_enum.h  alfaplugin_manager.c  alfaplugin_manager.h  alfaplugin_sys.h  bib_e_part.h  main.c
CC2/alfaplugin-export/ds/: list.c  list.h
CC2/alfaplugin-export/plugins/: cplug_alfa_coordinates.c  cplug_alfa_fillet_polyline.c  cplug_alfa_rebar.c  cplug_alfa_redraw.c  cplug_alfa_stirrup.c
CC2/alfaplugin-export/str/: str_builder.c
(+8 files in other folders)
